--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -184,6 +184,7 @@
         <div class="nav-bottom-list"></div>
       </div>
     </nav>
+    {{>messages}}
     {{{body}}}
     <script src="/assets/js/jquery-1.12.0.min.js"></script>
     <script src="/assets/js/owl.carousel.min.js"></script>
