feat: add user login register function

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -18,12 +18,12 @@
         CSS FILES
       =================-->
     <!-- Bootstrap CSS-->
-    <link
+    {{!-- <link
       rel="stylesheet"
       href="/assets/css/bootstrap.min.css"
       type="text/css"
       media="all"
-    />
+    /> --}}
     <!-- Owl Carousel CSS -->
     <link href="/assets/css/owl.carousel.min.css" rel="stylesheet" />
     <link href="/assets/css/owl.theme.default.min.css" rel="stylesheet" />
@@ -73,7 +73,7 @@
               <img src="/assets/images/logo-header.png" alt="appifylab" />
             </a>
           </div>
-          <div class="nav-search-bar">
+          <div class="nav-search-bar mt-3">
             <form action="#">
               <div class="nav-search-locat">
                 <div class="nav-search-locat-inner" id="location-delivery">
