--- a/views/partials/messages.hbs
+++ b/views/partials/messages.hbs
@@ -1,5 +1,8 @@
 {{#if error_msg}}
-  <div class="alert alert-danger alert-dismissible fade show" role="alert">
+  <div
+    class="alert alert-danger alert-dismissible fade show mt-67 text-center"
+    role="alert"
+  >
     <strong>
       {{error_msg}}
     </strong>
@@ -12,7 +15,10 @@
   </div>
 {{/if}}
 {{#if success_msg}}
-  <div class="alert alert-success alert-dismissible fade show" role="alert">
+  <div
+    class="alert alert-success alert-dismissible fade show mt-67 text-center"
+    role="alert"
+  >
     <strong>
       {{success_msg}}
     </strong>
@@ -25,7 +31,10 @@
   </div>
 {{/if}}
 {{#if warning_msg}}
-  <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <div
+    class="alert alert-warning alert-dismissible fade show mt-67 text-center"
+    role="alert"
+  >
     <strong>
       {{warning_msg}}
     </strong>
