--- a/views/products.hbs
+++ b/views/products.hbs
@@ -1,4 +1,15 @@
 {{>header}}
-<h1>
-  Products
-</h1>
+<section class="main-section">
+  <div class="container">
+    <div class="section-details">
+      <div class="row">
+        <div class="col-md-2 col-sm-2 mt-10 move-sec">
+          {{>category}}
+        </div>
+        <div class="col-md-8 col-sm-8 mt-10 m-col-12">
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
