--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -60,130 +60,7 @@
         </div>
       </div>
     </div>
-    <nav>
-      <div class="container">
-        <div class="nav-inner">
-          <div class="nav-brand">
-            <div class="nav-category-menu">
-              <span>
-                <i class="fas fa-bars"></i>
-              </span>
-            </div>
-            <a href="/">
-              <img src="/assets/images/logo-header.png" alt="appifylab" />
-            </a>
-          </div>
-          <div class="nav-search-bar mt-3">
-            <form action="#">
-              <div class="nav-search-locat">
-                <div class="nav-search-locat-inner" id="location-delivery">
-                  <span>
-                    <i class="fas fa-map-marker-alt"></i>
-                  </span>
-                </div>
-              </div>
-              <div class="nav-search-input">
-                <div class="nav-search-input-inner">
-                  <input type="text" placeholder="Search for products" />
-                </div>
-              </div>
-              <div class="nav-search-icon">
-                <div class="nav-search-icon-inner">
-                  <button type="submit">
-                    <span>
-                      <i class="fas fa-search"></i>
-                    </span>
-                  </button>
-                </div>
-              </div>
-            </form>
-          </div>
-          <div class="nav-navigation">
-            {{#if user}}
-              <ul>
-                <li class="nav-navigation-list click-prof navi-move">
-                  <a href="#">
-                    <img src="/assets/images/dgMan.svg" alt="" />
-                  </a>
-                  <span></span>
-                  <ul class="prop-dropdown">
-                    <li>
-                      <a href="/users/{{user.id}}">
-                        Hi
-                        {{user.userName}}
-                      </a>
-                    </li>
-                    <li>
-                      <a href="/users/{{user.id}}">
-                        Your profile
-                      </a>
-                    </li>
-                    <li>
-                      <a href="">
-                        Your orders
-                      </a>
-                    </li>
-                    <li>
-                      <a href="">
-                        Your addresses
-                      </a>
-                    </li>
-                    <li>
-                      <a href="">
-                        After sales services
-                      </a>
-                    </li>
-                    {{#if user.isAdmin}}
-                      <li>
-                        <a href="">
-                          Back stage
-                        </a>
-                      </li>
-                    {{/if}}
-                    <li>
-                      <a href="/logout">
-                        Log out
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="nav-navigation-list cart-list">
-                  <a href="#">
-                    <span>
-                      <i class="fas fa-shopping-cart"></i>
-                    </span>
-                    <p class="cart-show">
-                      {{#if user.Cart.Products}}
-                        {{getCartAmount user.Cart.Products}}
-                      {{else}}
-                        0
-                      {{/if}}
-                    </p>
-                  </a>
-                </li>
-              </ul>
-            {{else}}
-              <ul>
-                <li class="nav-navigation-list click-prof navi-move">
-                  <a href="#">
-                    <img src="/assets/images/dgMan.svg" alt="" />
-                  </a>
-                  <span></span>
-                  <ul class="prop-dropdown">
-                    <li>
-                      <a href="/login">
-                        Login
-                      </a>
-                    </li>
-                  </ul>
-                </li>
-              </ul>
-            {{/if}}
-          </div>
-        </div>
-        <div class="nav-bottom-list"></div>
-      </div>
-    </nav>
+    {{>navigator}}
     {{>messages}}
     {{{body}}}
     <script src="/assets/js/jquery-1.12.0.min.js"></script>
