--- a/views/partials/navigator.hbs
+++ b/views/partials/navigator.hbs
@@ -73,7 +73,7 @@
                 </li>
                 {{#if user.isAdmin}}
                   <li>
-                    <a href="">
+                    <a href="/admin/products">
                       Back stage
                     </a>
                   </li>
