--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -14,19 +14,19 @@
       <th scope="col">Category</th>
       <th scope="col">Invetory</th>
       <th scope="col">Price</th>
-      <th scope="col" class="text-center">Action</th>
+      <th scope="col">Action</th>
     </tr>
   </thead>
   <tbody>
     {{#each products}}
       <tr>
         <th scope="row">{{this.id}}</th>
-        <td>{{this.image}}</td>
+        <td><img class="img-responsive center-block" src="{{this.SKU.image}}" style="width: 100px; border-radius: 50px; transition: opacity 0.5s; opacity:0;" onload="this.style.opacity=1;"></td>
         <td>{{this.name}}</td>
         <td>{{this.Category.name}}</td>
         <td>{{this.invetory}}</td>
-        <td>${{this.price}}</td>
-        <td class="d-flex justify-content-center">
+        <td>${{this.SKU.price}}</td>
+        <td class="">
           <button type="button" class="btn btn-link">
             <a class="btn btn-link link-primary" href="/admin/products/{{this.id}}">
               Show
