modify: modify product inventory

--- a/views/admin/product.hbs
+++ b/views/admin/product.hbs
@@ -30,15 +30,15 @@
           </li>
           <li>
             <strong>
-              Price:
+              Inventory:
             </strong>
-            {{product.SKU.price}}
+            {{product.inventory}}
           </li>
           <li>
             <strong>
-              Invetory:
+              Price:
             </strong>
-            {{product.invetory}}
+            {{product.SKU.price}}
           </li>
         </ul>
       </div>
