--- a/views/admin/products.hbs
+++ b/views/admin/products.hbs
@@ -28,7 +28,7 @@
             {{/if}}
             [{{this.Category.name}}]
         </td>
-        <td>{{this.invetory}}</td>
+        <td>{{this.inventory}}</td>
         <td>${{this.SKU.price}}</td>
         <td class="">
           <button type="button" class="btn btn-link">
