--- a/views/partials/admin-product-form.hbs
+++ b/views/partials/admin-product-form.hbs
@@ -28,8 +28,8 @@
   <textarea class="form-control" id="spuSpec" name="spuSpec" rows="3">{{product.spuSpec}}</textarea>
 </div>
 <div class="form-row mb-3">
-  <label class="form-label" for="skuName">Sku Description</label>
-  <textarea class="form-control" id="skuName" name="skuName" rows="3">{{product.SKU.desc}}</textarea>
+  <label class="form-label" for="skuDesc">Sku Description</label>
+  <textarea class="form-control" id="skuDesc" name="skuDesc" rows="3">{{product.SKU.desc}}</textarea>
 </div>
 <div class="form-row mb-3">
   <label class="form-label" for="image">Image</label>
