modify: modify category nav

--- a/views/partials/category.hbs
+++ b/views/partials/category.hbs
@@ -13,6 +13,11 @@
   </div>
   <div class="category-section-item">
     <ul>
+      <li>
+        <a href="?categoryId=">
+          All
+        </a>
+      </li>
       {{#each categories}}
         <li>
           <a href="?categoryId={{this.id}}">
