feat: add about page

--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -54,7 +54,7 @@
             <div class="footer-details">
               <ul class="footer-list">
                 <li>
-                  <a href="about.html">
+                  <a href="/about">
                     <span>
                       <i class="fas fa-chevron-right"></i>
                     </span>
